manifests/base/resources/hub/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hub
    chart: hub-1.3.92
    heritage: Helm
    release: hub
  name: hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hub
      release: hub
  template:
    metadata:
      labels:
        app: hub
        release: hub
    spec:
      containers:
      - image: qliktech-docker.jfrog.io/hub:1.0.166
        imagePullPolicy: IfNotPresent
        name: main
        ports:
        - containerPort: 3023
      imagePullSecrets:
      - name: artifactory-docker-secret
---
