manifests/base/resources/hub/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "9180"
    prometheus.io/scrape: "true"
  labels:
    app: hub
    chart: hub-1.3.92
    heritage: Helm
    release: hub
  name: hub
spec:
  ports:
  - name: hub
    port: 3023
    protocol: TCP
    targetPort: 3023
  selector:
    app: hub
    release: hub
  type: ClusterIP
---
