manifests/base/resources/hub/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ( $request_method  !~ ^(GET|HEAD)$ ) {
        add_header Allow "GET, HEAD" always;
        return 405;
      }
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: hub
    chart: hub-1.3.92
    heritage: Helm
    release: hub
  name: hub
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: hub
          servicePort: 3023
        path: /
---
